--- a/config
+++ b/config
@@ -49,7 +49,13 @@
 		                   #:directory (config-file "nvim"))
                  #:links (list
                           (link* #:filename (home-file ".config/nvim")
-                                 #:target (config-file "nvim"))))))
+                                 #:target (config-file "nvim"))))
+	(config* #:name "guix"
+		 #:source (source* #:uri (my-repo "guix-config")
+				   #:directory (config-file "guix"))
+		 #:links (list
+			  (link* #:filename (home-file ".config/guix/config")
+				 #:target (config-file "guix"))))))
 
 (define (configs-names)
   (map config-name %configs))
