--- a/config
+++ b/config
@@ -16,7 +16,7 @@
   (apply build-file-name (getenv "HOME") file-parts))
 
 (define (config-file . file-parts)
-  (apply home-file "dotfiles" file-parts))
+  (apply build-file-name (getenv "DOTDIR") file-parts))
 
 (set-locale)
 
@@ -24,46 +24,51 @@
   (string-append "https://github.com/c4dr01d/" name))
 
 (define %configs
-  (list (config* #:name "zsh"
-		         #:source (source* #:uri (my-repo "zsh-config")
-				                   #:directory (config-file "zsh"))
-                 #:links (list
-                          (link* #:filename (home-file ".zshenv")
-                                 #:target (config-file "zsh/zshenv"))
-                          (link* #:filename (home-file ".zprofile")
-                                 #:target (config-file "zsh/zprofile"))
-                          (link* #:filename (home-file ".zshrc")
-                                 #:target (config-file "zsh/zshrc"))
-                          (link* #:filename (home-file ".config/zsh")
-                                 #:target (config-file "zsh/zsh"))))
-        (config* #:name "guile"
-                 #:source (source* #:uri (my-repo "guile")
-                                   #:directory (config-file "guile"))
-                 #:links (list
-                          (link* #:filename (home-file ".config/guile")
-                                 #:target (config-file "guile"))))
-        (config* #:name "dircolors"
-                 #:links (list
-                          (link* #:filename (home-file ".config/dircolors")
-                                 #:target (config-file "dircolors"))))
-        (config* #:name "emacs"
-	             #:source (source* #:uri (my-repo "emacs-config")
-		                           #:directory (config-file "emacs"))
-                 #:links (list
-                          (link* #:filename (home-file ".config/emacs")
-                                 #:target (config-file "emacs"))))
-	    (config* #:name "guix"
-		         #:source (source* #:uri (my-repo "guix-config")
-				                   #:directory (config-file "guix"))
-		         #:links (list
-			              (link* #:filename (home-file ".config/guix/config")
-				                 #:target (config-file "guix"))))
-	    (config* #:name "tmux"
-		         #:source (source* #:uri (my-repo "tmux-config")
-				                   #:directory (config-file "tmux"))
-		         #:links (list
-			              (link* #:filename (home-file ".config/tmux")
-				                 #:target (config-file "tmux"))))))
+  (list
+   ;; Shell
+   (config* #:name "zsh"
+            #:source (source* #:uri (my-repo "zsh-config")
+                              #:directory (config-file "zsh"))
+            #:links (list
+                     (link* #:filename (home-file ".zshenv")
+                            #:target (config-file "zsh/zshenv"))
+                     (link* #:filename (home-file ".zprofile")
+                            #:target (config-file "zsh/zprofile"))
+                     (link* #:filename (home-file ".zshrc")
+                            #:target (config-file "zsh/zshrc"))
+                     (link* #:filename (home-file ".config/zsh")
+                            #:target (config-file "zsh/zsh"))))
+   (config* #:name "dircolors"
+            #:links (list
+                     (link* #:filename (home-file ".config/dircolors")
+                            #:target (config-file "dircolors"))))
+   ;; Guile
+   (config* #:name "guile"
+            #:source (source* #:uri (my-repo "guile")
+                              #:directory (config-file ".config/guile"))
+            #:links (list
+                     (link* #:filename (home-file ".config/guile")
+                            #:target (config-file "guile"))))
+   (config* #:name "guix"
+            #:source (source* #:uri (my-repo "guix")
+                              #:directory (config-file "guix"))
+            #:links (list
+                     (link* #:filename (home-file ".config/guix/system")
+                            #:target (config-file "guix"))))
+   ;; Editor
+   (config* #:name "emacs"
+            #:source (source* #:uri (my-repo "emacs-config")
+                              #:directory (config-file "emacs"))
+            #:links (list
+                     (link* #:filename (home-file ".config/emacs")
+                            #:target (config-file "emacs"))))
+   ;; Terminal
+   (config* #:name "tmux"
+            #:source (source* #:uri (my-repo "tmux-config")
+                              #:directory (config-file "tmux"))
+            #:links (list
+                     (link* #:filename (home-file ".config/tmux")
+                            #:target (config-file "tmux"))))))
 
 (define (configs-names)
   (map config-name %configs))
@@ -90,16 +95,18 @@ is specified, then all available ones will be shown, fetched or
 deployed.  '--fetch' and '--deploy' can be specified together.")
   (newline))
 
-(define* (list-strings strings #:key title (proc (lambda (s)
-                                                   (format #t "~{~a~%~}" (sort s string-ci<)))))
+(define* (list-strings strings
+                       #:key
+                       title
+                       (proc (lambda (s)
+                               (format #t "~{~a~%~}" (sort s string-ci<)))))
   (when title
     (display title)
     (newline))
   (proc strings))
 
 (define (show-configs-names)
-  (list-strings (configs-names)
-                #:title "Available configurations:"))
+  (list-strings (configs-names) #:title "Available configurations:"))
 
 (define (call-with-old-files proc)
   (let ((files (old-files)))
@@ -108,64 +115,50 @@ deployed.  '--fetch' and '--deploy' can be specified together.")
         (proc (old-files)))))
 
 (define (show-old-files)
-  (call-with-old-files
-   (lambda (files)
-     (list-strings files
-                   #:title "Old configuration files:"))))
+  (call-with-old-files (lambda (files)
+                         (list-strings files #:title "Old configuration files:"))))
 
 (define (ls-old-files)
-  (call-with-old-files
-   (lambda (files)
-     (list-strings files
-                   #:title "Old configuration files:"
-                   #:proc (lambda (files)
-                            (apply system*
-                                   "ls" "-l" "--directory" "--color=auto"
-                                   (sort files string-ci<)))))))
+  (call-with-old-files (lambda (files)
+                         (list-strings files
+                                       #:title "Old configuration files:"
+                                       #:proc (lambda (files)
+                                                (apply system* "ls" "-l" "--directory" "--color=auto" (sort files string-ci<)))))))
 
 (define (delete-old-files)
   (call-with-old-files (cut map delete-file-recursively <>)))
 
 (define %options
-  (list (option '(#\h "help") #f #f
-                (lambda _
-                  (show-help)
-                  (exit 0)))
-        (option '(#\l "list") #f #f
-                (lambda _
-                  (show-configs-names)
-                  (exit 0)))
-        (option '(#\O "list-old") #f #f
-                (lambda _
-                  (show-old-files)
-                  (exit 0)))
-        (option '(#\o "ls-old") #f #f
-                (lambda _
-                  (ls-old-files)
-                  (exit 0)))
-        (option '(#\D "delete-old") #f #f
-                (lambda _
-                  (delete-old-files)
-                  (exit 0)))
-        (option '(#\s "show") #f #f
-                (lambda (opt name arg seed)
-                  (alist-cons 'action 'show seed)))
-        (option '(#\f "fetch") #f #f
-                (lambda (opt name arg seed)
-                  (alist-cons 'action 'fetch seed)))
-        (option '(#\d "deploy") #f #f
-                (lambda (opt name arg seed)
-                  (alist-cons 'action 'deploy seed)))))
+  (list (option '(#\h "help") #f #f (lambda _
+                                      (show-help)
+                                      (exit 0)))
+        (option '(#\l "list") #f #f (lambda _
+                                      (show-configs-names)
+                                      (exit 0)))
+        (option '(#\O "list-old") #f #f (lambda _
+                                          (show-old-files)
+                                          (exit 0)))
+        (option '(#\o "ls-old") #f #f (lambda _
+                                        (ls-old-files)
+                                        (exit 0)))
+        (option '(#\D "delete-old") #f #f (lambda _
+                                            (delete-old-files)
+                                            (exit 0)))
+        (option '(#\s "show") #f #f (lambda (opt name arg seed)
+                                      (alist-cons 'action 'show seed)))
+        (option '(#\f "fetch") #f #f (lambda (opt name arg seed)
+                                       (alist-cons 'action 'fetch seed)))
+        (option '(#\d "deploy") #f #f (lambda (opt name arg seed)
+                                        (alist-cons 'action 'deploy seed)))))
 
 (define (parse-args args)
-  (reverse
-   (args-fold args %options
-              (lambda (opt name arg seed)
-                (print-error "Unrecognized option: '~a'" name)
-                seed)
-              (lambda (arg seed)
-                (alist-cons 'config arg seed))
-              '())))
+  (reverse (args-fold args %options
+                      (lambda (opt name arg seed)
+                        (print-error "Unrecognized option: '~a'" name)
+                        seed)
+                      (lambda (arg seed)
+                        (alist-cons 'config arg seed))
+                      '())))
 
 (define (old-filename filename)
   (string-append filename "-old"))
@@ -175,18 +168,16 @@ deployed.  '--fetch' and '--deploy' can be specified together.")
 
 (define (old-files)
   (append-map (lambda (link)
-                (find-matching-files
-                 (old-filename (link-filename link))))
+                (find-matching-files (old-filename (link-filename link))))
               (configs-links)))
 
 (define deploy-config*
   (cut deploy-config <> old-unique-filename))
 
 (define (options->values name opts)
-  (filter-map (match-lambda
-                ((key . value)
-                 (and (eq? key name) value))
-                (_ #f))
+  (filter-map (match-lambda ((key . value)
+                             (and (eq? key name) value))
+                            (_ #f))
               opts))
 
 (define options->config-names
@@ -199,15 +190,13 @@ deployed.  '--fetch' and '--deploy' can be specified together.")
   (let ((show? (memq 'show names))
         (fetch? (memq 'fetch names))
         (deploy? (memq 'deploy names)))
-    (cond
-     (show? show-config)
-     ((and fetch? deploy?)
-      (lambda (config)
-        (fetch-config config)
-        (deploy-config* config)))
-     (fetch? fetch-config)
-     (deploy? deploy-config*)
-     (else #f))))
+    (cond (show? show-config)
+          ((and fetch? deploy?) (lambda (config)
+                                  (fetch-config config)
+                                  (deploy-config* config)))
+          (fetch? fetch-config)
+          (deploy? deploy-config*)
+          (else #f))))
 
 (define (lookup-config name)
   (find (lambda (config)
@@ -215,11 +204,10 @@ deployed.  '--fetch' and '--deploy' can be specified together.")
         %configs))
 
 (define (lookup-configs names)
-  (filter-map
-   (lambda (name)
-     (or (lookup-config name)
-         (begin (print-error "No '~a' configuration was found" name) #f)))
-   names))
+  (filter-map (lambda (name)
+                (or (lookup-config name)
+                    (begin (print-error "No '~a' configuration was found" name) #f)))
+              names))
 
 (define (main arg0 . args)
   (let* ((opts (parse-args args))
